# ara

./: .gitignore  README.md  install.sh
app/: Cargo.toml  Dioxus.toml  build.rs  install.sh  package-lock.json  tailwind.config.js
app/public/: tailwind.css
app/resources/: resources.gresource.xml  window.ui
app/src/: constants.rs  draw.rs  io.rs  main.rs  painter.rs  plane_graph.rs  service.rs  ui.rs
app/src/components/: app.rs  canvas.rs  config_panel.rs  mod.rs
app/src/draw/: canvas_draw.rs  mod.rs
app/src/window/: imp.rs  mod.rs
examples/: p16.in  tree1.in
service/: CMakeLists.txt  README.md  install.sh
service/include/: embedding.hpp  planar.hpp  triangulation.hpp  utils.hpp
service/src/: embedding.cpp  main.cpp  planar.cpp  trangulation.cpp  utils.cpp
