[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
png = "0.17.13"
cairo-rs = { version = "0.19.2", features = ["png"] }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }

[[bin]]
name = "ara"
path = "src/main.rs"

[build-dependencies]
glib-build-tools = "0.19.0"
