[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.5.0-alpha.0"
dioxus-desktop = "0.5.0-alpha.0"
dioxus-hooks = "0.4.3"
dioxus-logger = "0.4.1"
itertools = "0.12.1"
log = "0.4.21"

[[bin]]
name = "ara"
path = "src/main.rs"

[build-dependencies]
glib-build-tools = "0.19.0"
