[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.5.0-alpha.0"
dioxus-desktop = "0.5.0-alpha.0"
dioxus-hooks = "0.4.3"
dioxus-logger = "0.4.1"
itertools = "0.12.1"
js-sys = "0.3.69"
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"

[[bin]]
name = "ara"
path = "src/main.rs"

[build-dependencies]
glib-build-tools = "0.19.0"
